[#51733725] - Cards correct flipping thought (without animation) between term and definition when term is clicked on.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1754,9 +1754,15 @@ img + span{
 	font-size: 22px;
 	position: relative;
 	top: 75px;
+	bottom: 70px;
 	text-align: center;
 	width: auto;
 	
+}
+
+.term{
+	margin-top: 75px;
+	/*bottom: 70px;*/
 }
 
 .definition{
@@ -1792,6 +1798,10 @@ img + span{
 .controls{
 	position: relative;
 	top: 100px;
+}
+
+.left-arrow, .right-arrow{
+	cursor: pointer;
 }
 
 .left-arrow{
