[#53940797] #4 #5 fix 15 - If either the mastered or practice more buttons are clicked when toggled on, it removes the resource from the DB. Bug fixed when cycling fast through all the cards.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1847,6 +1847,7 @@ button.practice-more{
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
+	cursor: pointer;
 }
 
 .practice-more{
