[#53940797] #4 #5 - If user has flagged practice more then that card appears 2 more times when studying a deck.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1857,7 +1857,8 @@ button.practice-more{
 }
 
 .practice-more:hover{
-	background-color: #c21b1b;
+	/*background-color: #c21b1b;*/
+	background-color: #fa0000;
 }
 
 .mastered{
