--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1750,7 +1750,7 @@ img + span{
 	display: none;
 }	
 
-.card p{
+.term, .definition{
 	margin: 0 auto;
 	vertical-align: middle;
 	padding: 0 30px;
@@ -1761,11 +1761,10 @@ img + span{
 	bottom: 70px;
 	text-align: center;
 	width: auto;
-	
 }
 
 .term{
-	margin-top: 75px;
+	/*margin-top: 75px;*/
 	/*bottom: 70px;*/
 }
 
@@ -1773,17 +1772,18 @@ img + span{
 	display: none;
 }
 
-.card p:last-child{
+.keyboard-shortcuts{
 	font-size: 12px;
 	color: #484C4C;
 	font-weight: 600;
-	top: 190px;
-	right: 15px;
+	position: relative;
+	top: 180px;
+	left: 15px;
 	text-align: left;
 	cursor: pointer;
 }
 
-.card p:last-child img{
+.keyboard-shortcuts img{
 	position: relative;
 	bottom: 2px;
 	right: 2px;
@@ -2331,15 +2331,6 @@ footer .sizer p:nth-child(3){
 	clear: both;
 	text-align: center;
 }
-
-
-
-
-
-
-
-
-
 
 
 
