Finish [#54088701] fix #27 - If a user clicks 'End Quiz' it will disregard any quiz and score currently they were in the process of and return them to the deck they were studying.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2218,6 +2218,11 @@ button.mastered{
 	height: 250px;
 }
 
+.quiz button a{
+	color: #FFF;
+	text-decoration: none;
+}
+
 .quiz-content .flash-card .answer{
 	display: none;
 }
