--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1081,7 +1081,7 @@ img + span{
 }
 
 .level-progress span:first-child{
-	width: 10%;
+	width: 100%;
 	background-color: #FFF;
 	-webkit-border-top-left-radius: 20px;
 	-webkit-border-bottom-left-radius: 20px;
@@ -1089,18 +1089,30 @@ img + span{
 	-moz-border-radius-bottomleft: 20px;
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
+	-webkit-border-top-right-radius: 20px;
+	-webkit-border-bottom-right-radius: 20px;
+	-moz-border-radius-topright: 20px;
+	-moz-border-radius-bottomright: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
 
 .level-progress span:first-child span:first-child{
 	background-color: green;
 	border: none;
-	width: 100%;
+	width: 30%;
 	-webkit-border-top-left-radius: 20px;
 	-webkit-border-bottom-left-radius: 20px;
 	-moz-border-radius-topleft: 20px;
 	-moz-border-radius-bottomleft: 20px;
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
+	-webkit-border-top-right-radius: 0;
+	-webkit-border-bottom-right-radius: 0;
+	-moz-border-radius-topright: 0;
+	-moz-border-radius-bottomright: 0;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
 }
 
 .level-progress span:nth-child(2){
