[Delivers #54494850] fix #38 - Styles corrected on both add deck and edit deck pages

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1740,7 +1740,7 @@ img + span{
 	display: none;
 }	
 
-.term, .definition, .question{
+.flash-card .term, .flash-card  .definition,.flash-card  .question{
 	margin: 0 auto;
 	vertical-align: middle;
 	padding: 0 30px;
