[Delivers #54495752] fix #47 - User dashboard notifications height changed to auto unless under 400px set it to 400px to match study tab.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1017,7 +1017,7 @@ img + span{
 .user-notification{
 	margin: 20px 0;
 	padding: 20px 0 30px 0;
-	height: 300px;
+	height: auto;
 }
 
 .user-notification{
